really fixed ar-nav alignment (css)

--- a/public/styles/ar-nav.css
+++ b/public/styles/ar-nav.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 body {
-    position: relative; /* needed for the overlay to extend when you scroll */
+    /* position: relative; needed for the overlay to extend when you scroll */
     /* general styles */
     padding: 30px;
     font-family: 'Open Sans', sans-serif;
